--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-!*/media/profile_pics/default.png
+
 
 venv/
 # Created by https://www.gitignore.io/api/django,python,pycharm,visualstudiocode
@@ -12,8 +12,9 @@ __pycache__/
 local_settings.py
 
 
-media
 
+
+!media\profile_pics\default.*
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
 # in your Git repository. Update and uncomment the following line accordingly.
 # <django-project-name>/staticfiles/
