--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,27 @@
 asgiref==3.2.7
+awscli==1.18.66
+botocore==1.16.16
+click==6.7
+colorama==0.4.3
+configobj==5.0.6
 Django==3.0.6
 django-crispy-forms==1.9.1
+django-storages==1.9.1
+docutils==0.15.2
 gunicorn==20.0.4
-pytz==2020.1
-sqlparse==0.3.1
-whitenoise==5.0.1
+jmespath==0.10.0
 Pillow==7.1.2
+prompt-toolkit==1.0.18
+pyasn1==0.4.8
+Pygments==2.6.1
+python-dateutil==2.8.1
+pytz==2020.1
+PyYAML==5.3.1
+rsa==3.4.2
+s3transfer==0.3.3
+saws==0.4.3
+six==1.15.0
+sqlparse==0.3.1
+urllib3==1.25.9
+wcwidth==0.1.9
+whitenoise==5.0.1
