--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,9 @@ colorama==0.4.3
 configobj==5.0.6
 Django==3.0.6
 django-crispy-forms==1.9.1
+django-extensions==2.2.9
 django-storages==1.9.1
+django-werkzeug==1.0.0
 docutils==0.15.2
 gunicorn==20.0.4
 jmespath==0.10.0
@@ -25,4 +27,7 @@ six==1.15.0
 sqlparse==0.3.1
 urllib3==1.25.9
 wcwidth==0.1.9
+Werkzeug==1.0.1
 whitenoise==5.0.1
+dj-database-url==0.5.0
+gunicorn==20.0.4
