--- a/requirements.txt
+++ b/requirements.txt
@@ -15,17 +15,18 @@ docutils==0.15.2
 gunicorn==20.0.4
 jmespath==0.10.0
 Pillow==7.1.2
-
 prompt-toolkit==1.0.18
 psycopg2==2.8.5
 pyasn1==0.4.8
 Pygments==2.6.1
 python-dateutil==2.8.1
+python-http-client==3.2.7
 pytz==2020.1
 PyYAML==5.3.1
 rsa==3.4.2
 s3transfer==0.3.3
 saws==0.4.3
+sendgrid==6.3.1
 six==1.15.0
 sqlparse==0.3.1
 urllib3==1.25.9
