--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "venv\\Scripts\\python.exe"
+    "python.pythonPath": "C:\\Users\\ls\\.virtualenvs\\Assignment_1_7420_ls-Oz0pwIOJ\\Scripts\\python.exe"
 }
