--- a/frontend-react/package.json
+++ b/frontend-react/package.json
@@ -11,9 +11,13 @@
   },
   "devDependencies": {},
   "scripts": {
-    "start": "react-scripts start"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:9000",
+
+  "proxy": "http://insta-docker-aws.lakshaysethi.com",
   "browserslist": {
     "production": [
       ">0.2%",
