Revert "Revert "Merge branch 'Assignment-2'""
This reverts commit 6877d208007a5e69d75db1303130649ac7a06c6b.

--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,7 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+pylint = "*"
 
 [packages]
 amqp = "==2.5.2"
@@ -47,6 +48,7 @@ Pillow = "==7.1.2"
 Pygments = "==2.6.1"
 PyYAML = "==5.3.1"
 Werkzeug = "==1.0.1"
+djangorestframework = "*"
 
 [requires]
 python_version = "3.8"
